--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <script src="dist/xml/reportes/ReporteXML.js" ></script>
     
     <script src="dist/xpath/ast/ast_xpath.js" ></script>
+    <script src="dist/xpath/ast/AST_XPATH.js" ></script>
     <script src="dist/xpath/ast/tipox.js" ></script>
     <script src="dist/xpath/ast/TipoPrimitivo.js" ></script>
     <script src="dist/xpath/instrucciones/Axes.js" ></script>
